--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.10.4",
     "express-validator": "^2.9.0",
     "fbgraph": "^0.3.0",
+    "gith": "^1.0.4",
     "github-api": "^0.10.4",
     "hbs": "^3.0.1",
     "instagram-node": "^0.5.6",
