--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gith": "^1.0.4",
     "github-api": "^0.10.4",
     "hbs": "^3.0.1",
+    "hummus": "^1.0.41",
     "instagram-node": "^0.5.6",
     "lastfm": "^0.9.2",
     "less": "^2.4.0",
